# omni-captions-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  build.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish-to-pages.yml  publish.yml  skills-install.yml  test.yml
docs/plans/: 2026-01-23-laicut-align.md
skills/omnicaptions-LaiCut/: SKILL.md
skills/omnicaptions-convert/: SKILL.md
skills/omnicaptions-download/: SKILL.md
skills/omnicaptions-transcribe/: SKILL.md
skills/omnicaptions-translate/: SKILL.md
src/omnicaptions/: __init__.py  __main__.py  caption.py  cli.py  config.py
src/omnicaptions/prompts/: transcription_dotey.md
tests/: test_cli_convert.py  test_cli_entrypoint.py  test_import.py
tests/data/: SA1.vtt  karaoke_test.json
